<resources>
    <string name="app_name">Football Score Counter</string>
    <string name="spinner_title">Select Team</string>
    <string name="action_settings">Settings</string>
    <string name="option_select">Choose objects</string>
    <string name="text_score">0</string>
    <string name="goal">Goal</string>
    <string name="Minus">-</string>
    <string name="Plus">+</string>
    <string name="foul">Foul</string>
    <string name="corner">Corner</string>
    <string name="reset">reset</string>

    <string-array name="team_list">

        <item>Arsenal</item>

        <item>Crystal Palace</item>

        <item>Hull City</item>

        <item>Sunderland</item>

        <item>Tottenham</item>

    </string-array>

    <integer-array name="team_flag_list">

        <item>@drawable/arsenal1</item>

        <item>@drawable/crystal_palace</item>

        <item>@drawable/hull_city</item>

        <item>@drawable/sunderland1</item>

        <item>@drawable/tottenham1</item>

    </integer-array>
</resources>
