<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:fillViewport="true">
<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.footballscorecounter.MainActivity"
    android:background="@drawable/player"
    >


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/image_layout_height"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_premleague"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#B3FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/block"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginLeft="@dimen/button_margin"
                android:text="@string/spinner_title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/teamA_spinner"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

            <ImageView
                style="@style/image_view"
                android:id="@+id/teamA_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/crystal_palace" />
            <!--GOAL SECTION-->
            <TextView

                style="@style/text_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:textSize="@dimen/main_text_size"
                />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/text_score"
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_score"
                    android:textSize="@dimen/mainscore_text_size"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Minus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="goalMinus_TeamA"
                    android:layout_toLeftOf="@id/team_a_score"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Plus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="goalAdd_TeamA"
                    android:layout_toRightOf="@id/team_a_score"/>
            </RelativeLayout>
            <!--FOUL SECTION-->
            <TextView
                style="@style/text_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foul"
                android:textSize="@dimen/sub_text_size"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/text_score"
                    android:id="@+id/team_a_foul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_score"
                    android:textSize="@dimen/subscore_text_size"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Minus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/sub_button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="foulMinus_TeamA"
                    android:layout_toLeftOf="@id/team_a_foul"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Plus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/sub_button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="foulAdd_TeamA"
                    android:layout_toRightOf="@id/team_a_foul"/>
            </RelativeLayout>
            <!--CORNER SECTION-->
            <TextView
                style="@style/text_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corner"
                android:textSize="@dimen/sub_text_size"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/text_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_score"
                    android:textSize="@dimen/subscore_text_size"
                    android:id="@+id/team_a_corner"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Minus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/sub_button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="cornerMinus_TeamA"
                    android:layout_toLeftOf="@id/team_a_corner"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Plus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/sub_button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="cornerAdd_TeamA"
                    android:layout_toRightOf="@id/team_a_corner"/>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top"
                android:layout_marginLeft="@dimen/button_margin"
                android:text="@string/spinner_title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:layout_marginLeft="@dimen/button_margin"
                android:id="@+id/teamB_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

            <ImageView
                style="@style/image_view"
                android:id="@+id/teamB_image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/arsenal1" />
            <!--GOAL SECTION-->
            <TextView
                style="@style/text_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:textSize="@dimen/main_text_size"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/text_score"
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_score"
                    android:textSize="@dimen/mainscore_text_size"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Minus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="goalMinus_TeamB"
                    android:layout_toLeftOf="@id/team_b_score"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Plus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="goalAdd_TeamB"
                    android:layout_toRightOf="@id/team_b_score"/>
            </RelativeLayout>
            <!--FOUL SECTION-->
            <TextView
                style="@style/text_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foul"
                android:textSize="@dimen/sub_text_size"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/text_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_score"
                    android:textSize="@dimen/subscore_text_size"

                    android:id="@+id/team_b_foul" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Minus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/sub_button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="foulMinus_TeamB"
                    android:layout_toLeftOf="@id/team_b_foul"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Plus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/sub_button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="foulAdd_TeamB"
                    android:layout_toRightOf="@id/team_b_foul"/>
            </RelativeLayout>
            <!--CORNER SECTION-->
            <TextView
                style="@style/text_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corner"
                android:textSize="@dimen/sub_text_size"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/text_score"
                    android:id="@+id/team_b_corner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_score"
                    android:textSize="@dimen/subscore_text_size"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Minus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/sub_button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="cornerMinus_TeamB"
                    android:layout_toLeftOf="@id/team_b_corner"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Plus"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/sub_button_size"
                    android:layout_margin="@dimen/button_margin"
                    android:onClick="cornerAdd_TeamB"
                    android:layout_toRightOf="@id/team_b_corner"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reset"
            android:textColor="@android:color/holo_red_light"
            android:onClick="reset"
            />
    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>